# EchoRank

./: .gitignore  README.md  personal-chart-system-design.md  pyproject.toml  更新并打开榜单.bat
.github/workflows/: collect-private-chart.yml  pages.yml
frontend/: index.html  test-components.py
frontend/assets/: app.js  chart-data.js  styles.css  supabase.js
frontend/components/: aggregate-trend.js  app-navigation.js  auth-gate.js  bubbling-section.js  chart-list.js  chart-row.js  chart-tabs.js  netease-onboarding.js  period-selector.js  point-breakdown.js  rank-movement.js  settlement-archive.js  settlement-reveal.js  trend-detail.js
frontend/data/: chart-manifest.json  chart-snapshot.schema.json
frontend/data/trends/daily/: albums.json  artists.json  songs.json
frontend/data/trends/monthly/: albums.json  artists.json  songs.json
frontend/data/trends/weekly/: albums.json  artists.json  songs.json
frontend/data/trends/yearly/: albums.json  artists.json  (+1 more)
src/echorank/: __init__.py  __main__.py  cloud.py  database.py  demo.py  export.py  netease.py  ranking.py  repair.py  schema.sql  scoring.py  server.py  settlement.py  supabase_state.py  supabase_upload.py  workflow.py
src/echorank/admin/: admin.css  admin.js  index.html
supabase/: config.toml
supabase/functions/delete-account/: index.ts
supabase/migrations/: 20260720_create_collection_requests.sql  20260720_create_echorank_state_bucket.sql  20260720_validate_netease_uid.sql
tests/: test_cloud.py  test_core.py  test_netease.py  test_supabase_state.py  test_supabase_upload.py  test_workflow.py
(+19 files in other folders)
