[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "echorank"
version = "0.1.0"
description = "Auditable personal music chart scoring core"
requires-python = ">=3.11"

[tool.setuptools.package-data]
echorank = ["schema.sql", "admin/*"]

[tool.setuptools.packages.find]
where = ["src"]
